feat: add auth into e-ecommerce
